--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,7 +13,9 @@
   </ion-header>
 </ion-content>
 
-<div id="container">
-  <strong>Aplikasi Mobil</strong>
-  <p>Klik <a [routerLink]="['/home']">Masuk</a> untuk menuju home </p>
+<div id="container"> 
+  <h1><strong>Login</strong></h1>
+  <ion-input label="Username" labelPlacement="floating" type="text" [(ngModel)]="username" /> <br>
+  <ion-input label="Password" labelPlacement="floating" type="password" [(ngModel)]="password" />
+  <ion-button (click)="checkLoginAuth()"> Login </ion-button>
 </div>
